style.css
*, *::before, *::after {
  box-sizing: border-box;
  margin: 0;
  padding: 0;
}
html, body{
    font-family: 'Kumbh Sans', sans-serif;
}
:root{
    --primary-organge: hsl(26, 100%, 55%);
    --primary-pale-orange: hsl(25, 100%, 94%);
    --neutral-dark-blue: hsl(220, 13%, 13%);
    --neutral-grayish-blue: hsl(219, 9%, 45%);
    --neutral-light-grayish-blue: hsl(223, 64%, 98%);
    --neutral-white: hsl(0, 0%, 100%);
    --neutral-black: hsl(0, 0%, 0%);
    --faint-white:#f7f7f7;

    --spacing-two: 2em;
    --spacing: 1em;
    --spacing-three-quaters: 0.75em;
    --spacing-half: 0.5em;

    --next-btn-hover: hsla(217, 9%, 45%, 0.536);
    --btn-padding: 0.8em 1.6em;
    --header-padding: 1.5em 1em ;
}
body{
    position: relative;
   min-height: 100vh;
    
}
.header{
    display: flex;
    justify-content: space-between;
    align-items: center;
    padding: var(--header-padding);
    border-bottom: 1px solid var(--neutral-light-grayish-blue);
}
.header-left, .header-right{
    display: flex;
    gap: var(--spacing-three-quaters);
}
.menu-icon,
.close-icon, 
.cart-icon, 
.avatar, 
.minus-icon, 
.plus-icon, 
.btn, 
.delete{
    cursor: pointer;
}
.menu-icon{
    width: 1.2em;
}
.cart-container{
    position: relative;
}
.cart-count{
    position: absolute;
    top: -0.5em;
    right: -0.5em;
    background-color: var(--primary-organge);
    color: var(--neutral-white);
    font-size: .75rem;
    font-weight: 700;
    padding: 0.2em .5em;
    border-radius: 50%;
}
.nav{
    padding: var(--spacing);
    position: fixed;
    top: 0;
    left: -100%;
    background-color: var(--neutral-white);
    height: 100vh;
    width: 70%;
    z-index: 1;
    transition: left 250ms ease-in-out;
    padding: 2em;
}
.nav.active{
    left: 0;
    transition: left 250ms ease-in-out;
}
.close-icon{
     margin-bottom: var(--spacing);
     width: 1em;
     padding: 0;
     float: right;
}
.nav-list{
    list-style: none;   
   
}
.nav-link{
    font-size: 1.2em;
 margin-bottom: var(--spacing);   
  border-bottom: 1px solid var(--neutral-light-grayish-blue);
}
.nav-link a{
    text-decoration: none;
    color: var(--neutral-dark-blue);
    font-weight: 700;
    transition: color 250ms ease-in-out;
}
.nav-link a:hover{
    color: var(--primary-organge);
}
.avatar, .cart-icon{
    width: 1.7em;
}



@media (min-width: 768px) {
    .wrapper{
    width: 90%;
    margin: 0 auto;
    }
    .header-left{
        gap: var(--spacing-two);
    }
    .logo{
        order: -1;
    }
    .nav{
        position: static;
        height: auto;
        width: auto;
        display: flex;
        align-items: center;
        padding: 0;
        margin: 0;
    }
    .nav-list{
        display: flex;
        gap: var(--spacing);
    }
    .nav-link{
        margin-bottom: 0;
        border-bottom: none;
    }
    .nav-link a{
        color: var(--neutral-grayish-blue);
    }
    .menu-icon, .close-icon{
        display: none;
    }
}

.mySlides {display: none}
img {vertical-align: middle;}

/* Slideshow container */
.slideshow-container {
  width: 100%;
  position: relative;
  margin: auto;
}

/* Next & previous buttons */
.prev, .next {
  cursor: pointer;
  position: absolute;
  top: 50%;
  width: auto;
  padding: var(--spacing);
  margin-top: -22px;
  color:var(--neutral-white);
  font-weight: bold;
  transition: 0.6s ease;
  border-radius: 0 1em 1em 0;
  user-select: none;
}

/* Position the "next button" to the right */
.next {
  right: 0;
  border-radius: 1em 0 0 1em;
}

/* On hover, add a black background color with a little bit see-through */
.prev:hover, .next:hover {
  background-color:var(--next-btn-hover);
}

/* Fading animation */
.fade {
  animation-name: fade;
  animation-duration: 1.5s;
}

@keyframes fade {
  from {opacity: .6} 
  to {opacity: 1}
}

/* On smaller screens, decrease text size */
@media only screen and (max-width: 300px) {
  .prev, .next {font-size: .7em}
}

.text-content, .item-details, .item-actions {
  display: flex;
  flex-direction: column;
}
.item-details{
  gap: var(--spacing-two);
  width: 90%;
  margin: var(--spacing) auto;
}
.text-content, .item-actions, .price{
    gap: var(--spacing);
}
.text-content p,.faint, .original-price, .empty-cart  {
       color: var(--neutral-grayish-blue);
}
.empty-cart{
    text-align: center;
    font-weight: 550;
    padding: var(--spacing-two);
}
.faint{
    text-transform: uppercase;
    font-weight: 700;
    letter-spacing: 1px;
}
.text-content p{
    line-height: 1.4;
}
.price-card, .price, .cart-actions-container{
    display: flex;
    justify-content: space-between;
}
.discount-price{
    font-size: 1.5rem;
}
.price-card{
    font-size: 1rem;
    font-weight: 600;
}
.cta-wrapper{
    display: flex;
    flex-direction: column;
    gap: var(--spacing);
}
.original-price{
    align-self: center;
    text-decoration: line-through;
}
.price span{
    background-color: var(--neutral-black);
    color: var(--faint-white);
    padding: .2em .4em;
    border-radius: .2em;
    align-self: center;
}
.btn, .cart-actions-container{
     padding: var(--spacing-half) var(--spacing);
     border-radius: .4em;


}
.cart-actions-container{
    background-color: var(--neutral-light-grayish-blue);
}
.btn{
    display: inline-block;
    width: 100%;
    border: none;
    background-color: var(--primary-organge);
    font-size: 1rem;
    font-weight: 600;
}
.cart{
    width: 1.5em;
    margin: 0;

}

.attribution{
    color: var(--faint-white);
    background-color: var(--neutral-dark-blue);
    padding: 1.7em var(--spacing-two) ;
    font-size: 1em;
}
.cart-content{
    display: none;
    position:absolute;
    top: 9%;
    right: 9.5%;
    max-width: 300px;
    width: 90%;
    border-radius: .5em;
    background-color: var(--neutral-white);
    padding: var(--spacing-two);
}
.cart-content.active {
    display: block;
}
.cart-content-details{
    font-size: .8em;
}
.items{
    display: flex;
    gap: var(--spacing);
    margin: var(--spacing) 0;
}
.item-image{
    width: 25%;
    border-radius: .5em;
}
@media (min-width: 400px) {
    .cart-content{
        top: 8%;
        right: 7%;
        border: 2px solid var(--neutral-light-grayish-blue);
    }
}
@media (min-width: 768px) {
   /* body{
        overflow: hidden;
    }*/
    .cart-content{
        top: 13%;
        right: 7%;
        border: 2px solid var(--neutral-light-grayish-blue);
    }
   
    .main{
        display: flex;
        justify-content: space-between;
        margin: var(--spacing-two) auto;
        gap: var(--spacing-two);
        width: 75%;
    }
     .slideshow-container{
        flex-grow: 1;
    }
    .item-details{
        flex-grow: 1;
    }
    .cta-wrapper{
        flex-direction: row;
        width: 100%;
    }
    .cart-actions-container{
        width: 40%;
    }
    .btn-container{
        width: 60%;
    }

}
/*counter
css
.width-container {
    display: none;
}

.display-width {
    display: block;
    position: absolute;
    right: 0;
    top: 0;
    background-color: #E6E6E6;
    padding: .3em;
    font-size: .85em;
}*/

